--- a/static/css/main.css
+++ b/static/css/main.css
@@ -124,6 +124,12 @@ section.main {
   -ms-order: 2;
   order: 2;
 }
+section.footer {
+  -webkit-order: 3;
+  -moz-order: 3;
+  -ms-order: 3;
+  order: 3;
+}
 @media (min-width: 600px) {
   section.header {
     -webkit-order: 0;
@@ -142,6 +148,12 @@ section.main {
     -moz-order: 1;
     -ms-order: 1;
     order: 1;
+  }
+  section.footer {
+    -webkit-order: 3;
+    -moz-order: 3;
+    -ms-order: 3;
+    order: 3;
   }
 }
 section.header {
@@ -322,6 +334,17 @@ section.icons .content a .flag {
     margin-left: 3px;
     margin-right: 3px;
   }
+}
+section.footer .container {
+  -webkit-justify-content: flex-start;
+  -moz-justify-content: flex-start;
+  -ms-justify-content: flex-start;
+  justify-content: flex-start;
+  font-size: 16px;
+}
+section.footer .content {
+  color: #666;
+  font-size: 0.8rem;
 }
 section.main .container {
   -webkit-align-items: center;
